--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -49,6 +49,9 @@
 							<li><a href="#features"> ارتباط با ما </a></li>
 							<li><a href="#subscribe"> درباره ما </a></li>
 							<li><a href="#banner"> خانه </a></li>
+                            <li><a href="#subscribe1">
+                            اخبار
+                            </a></li>
 						</ul>
 					</div>
 					<!-- End Navigation  -->
@@ -330,6 +333,40 @@
 						<p class="subline"> 5-ثبت ونگهداری وقایع مهم نظیر تاریخ تولد وسالگرد ازدواج اعضای خانواده ، آشنایان و دوستان و اعلام ویادآوری اتوماتیک در تاریخ تعیین شده. </p>
 						<p class="subline"> 6-  دفترچه  یادداشت و دفتر نگهداری و یادآوری قرار ملاقات ها و برنامه های مهم . </p>
 						<p class="subline"> </p>
+					</div>
+					<a href="/register" class="btn btn-transparent1 btn-big"> ثبت نام </a>
+				</div>
+			</div>
+		</div>
+	</section>
+    <section id="subscribe1" class="section bg-blue-pattern">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center white-text">
+					<div class="headline">
+						<h2>
+بعد از برجام نرخ ارز چه تغییری می کند؟ / افق مثبت پیش روی بانک ها بعد از اجرای برجام
+
+                        </h2>
+						<p class="subline">
+به گزارش خبرگزاری خبرآنلاین، ولی الله سیف، رئیس کل بانک مرکزی با حضور در برنامه گفتگوی ویژه خبری درباره آثار رفع تحریم ها واجرای برجام در نظام پولی و بانکی کشور گفت: بعد از اجرای برجام 32 میلیارد و 600 میلیون دلار از منابع کشور آزاد می شود که از این مبلغ بخشی از آن متعلق به دولت و بخشی دیگر متعلق ...
+                        </p>
+                        <h2>
+                            جدول قیمت خودروهای وارداتی
+                        </h2>
+						<p class="subline">
+
+به گزارش آفتاب به نقل از ایسنا، قیمت باقی خودروهای وارداتی تغییر خاصی نسبت به نرخ این خودروها در هفته گذشته نداشته است.
+
+
+                        </p>
+                        <h2>
+                            تجارت شرکت های ایرانی - آمریکایی آزاد شد
+                        </h2>
+						<p class="subline">
+                        تابناک: مقامات امریکا محدودیت های مربوط به خرید نفت ایران از سوی نهادهای غیرامریکایی و همچنین فروش کالا و خدمات به بخش انرژی ایران را از میان برداشتند. - رویترز در گزارشی از وزارت خزانه داری امریکا اعلام کرد: واشنگتن درچارچوب کاهش تحریمها علیه ایران طبق توافق هسته ای بین المللی ...
+                        </p>
+
 					</div>
 					<a href="/register" class="btn btn-transparent1 btn-big"> ثبت نام </a>
 				</div>
