--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -48,6 +48,7 @@
 							<li><a href="#how-it-works">راهنمای سایت</a></li>
 							<li><a href="#features"> ارتباط با ما </a></li>
 							<li><a href="#subscribe"> درباره ما </a></li>
+                            <li><a href="#subscribe2">   گالری</a></li>
 							<li><a href="#banner"> خانه </a></li>
                             <li><a href="#subscribe1">
                             اخبار
@@ -78,9 +79,7 @@
 										<input  name="password" type="password" class="form-control" required placeholder="پسورد">
 									</div>
 									<button type="submit" class="btn btn-default btn-submit"> ورود </button></br>
-                                    <button type="submit" class="btn btn-default btn-submit"> ورودمهمان, </button>
-
-									 <label id="lable1" style="color:lightgoldenrodyellow; margin-top: 10px; ">
+                                    									 <label id="lable1" style="color:lightgoldenrodyellow; margin-top: 10px; ">
 
 										 <input type="checkbox">
 										مرا به خاطر بسپار
@@ -88,12 +87,6 @@
                                      </label>
 
 
-										 <p>
-										برای ورود بعنوان مهمان از نام کاربری
-                                        gest
-                                        ورمز عبور"123456"وارد شوید.
-
-                                     </p>
 									<div class="form-group">
 									  <a class="pull-left" href="/forget_pass" >
 
@@ -195,6 +188,7 @@
 			</div>
 		</div>
 	</section>
+
 
     <section id="features" class="section">
 		<div class="container">
@@ -339,6 +333,25 @@
 			</div>
 		</div>
 	</section>
+
+    <section id="subscribe2" class="section bg-blue-pattern">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center white-text">
+					<div class="headline">
+						<div class="col-md-3 col-md-offset-3">
+					        <img src="../../static/Admin/img/01.jpg">
+                            <img src="../../static/Admin/img/01.jpg">
+                            <img src="../../static/Admin/img/01.jpg">
+
+				</div>
+					</div>
+					<a href="/register" class="btn btn-transparent1 btn-big"> ثبت نام </a>
+				</div>
+			</div>
+		</div>
+	</section>
+
     <section id="subscribe1" class="section bg-blue-pattern">
 		<div class="container">
 			<div class="row">
