--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -339,15 +339,15 @@
 			<div class="row">
 				<div class="col-lg-12 text-center white-text">
 					<div class="headline">
-						<div class="col-md-3 col-md-offset-3">
-					        <img src="../../static/Admin/img/01.jpg">
-                            <img src="../../static/Admin/img/01.jpg">
-                            <img src="../../static/Admin/img/01.jpg">
+						<div class="col-md-3">
+					        <img src="../../static/Admin/img/1329.jpg.jpg">
+                            <img src="../../static/Admin/img/2149.jpg.jpg">
+                            <img src="../../static/Admin/img/459.jpg.jpg">
+                            <img src="../../static/Admin/img/56.jpg.jpg.jpg">
 
 				</div>
 					</div>
-					<a href="/register" class="btn btn-transparent1 btn-big"> ثبت نام </a>
-				</div>
+                     </div>
 			</div>
 		</div>
 	</section>
