--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -339,10 +339,10 @@
 			<div class="row">
 				<div class="col-lg-12 text-center white-text">
 					<div class="headline">
-						<div class="col-md-3">
-					        <img src="../../static/Admin/img/1329.jpg.jpg">
+						<div class="col-md-8 col-md-offset-2">
+					<img src="../../static/Admin/img/01.jpg">
 
-
+<img src="../../static/Admin/img/1329.jpg">
 				</div>
 					</div>
                      </div>
