--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -340,10 +340,14 @@
 				<div class="col-lg-12 text-center white-text">
 					<div class="headline">
 						<div class="col-md-3 col-md-offset-2">
-		        			<img src="../../static/Admin/img/459.jpg">
-                            <img src="../../static/Admin/img/56.jpg">
-                            <img src="../../static/Admin/img/2149.jpg">
-                             <img src="../../static/Admin/img/1329.jpg">
+                            <div class="row">
+
+                                <img class="col-md-3" src="../../static/Admin/img/459.jpg">
+                                <img class="col-md-3"src="../../static/Admin/img/56.jpg">
+                                <img class="col-md-3"src="../../static/Admin/img/2149.jpg">
+                                <img class="col-md-3"src="../../static/Admin/img/1329.jpg">
+                                <img class="col-md-3"src="../../static/Admin/img/2149.jpg">
+                            </div>
 				        </div>
 					</div>
                      </div>
