--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -339,14 +339,20 @@
 			<div class="row">
 				<div class="col-lg-12 text-center white-text">
 					<div class="headline">
-						<div class="col-md-3 col-md-offset-2">
-                            <div class="row">
+						<div class="col-md-12 col-md-offset-2">
+                            <div class="col-md-3">
+                                <img  src="../../static/Admin/img/459.jpg">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="../../static/Admin/img/56.jpg">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="../../static/Admin/img/2149.jpg">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="../../static/Admin/img/1329.jpg">
+                            </div>
 
-                                <img class="col-md-5" src="../../static/Admin/img/459.jpg">
-                                <img class="col-md-5"src="../../static/Admin/img/56.jpg">
-                                <img class="col-md-5"src="../../static/Admin/img/2149.jpg">
-                                <img class="col-md-5"src="../../static/Admin/img/1329.jpg">
-                                <img class="col-md-5"src="../../static/Admin/img/2149.jpg">
                             </div>
 				        </div>
 					</div>
