--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -340,7 +340,7 @@
 				<div class="col-lg-12 text-center white-text">
 					<div class="headline">
 						<div class="col-md-3 col-md-offset-2">
-                            <div class="row">
+                            <div class="col">
 
                                 <img class="col-md-8" src="../../static/Admin/img/459.jpg">
                                 <img class="col-md-8"src="../../static/Admin/img/56.jpg">
